--- a/02/10-11-lesson4-jspServlet/request-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/02/10-11-lesson4-jspServlet/request-servlet/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <servlet>
+        <servlet-name>patternServlet</servlet-name>
+        <servlet-class>com.imooc.servlet.pattern.PatternServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>patternServlet</servlet-name>
+        <url-pattern>/pattern/*</url-pattern>
+    </servlet-mapping>
+    <context-param>
+        <param-name>copyright</param-name>
+        <param-value>@ 粤B 发佘甜甜</param-value>
+    </context-param>
+    <context-param>
+        <param-name>title</param-name>
+        <param-value>程序员的梦工厂</param-value>
+    </context-param>
+     <!--    指定错误页面-->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.html</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.html</location>
+    </error-page>
 </web-app>
