--- a/04/27-28week/lesson2/mall/src/main/resources/application.properties
+++ b/04/27-28week/lesson2/mall/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 mybatis.mapper-locations=classpath:mappers/*.xml
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+
+#??????? ?????? ????
+file.upload.dir=I:/java/common/imooc/upload/
